--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,8 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Ashleigh Louie"
-  avatar : "/assets/images/DSC08038.jpg"
+  # name   : "Ashleigh Louie"
+  # avatar : "/assets/images/DSC08038.jpg"
   bio    : "I am a Senior Information Science student with a concentration in Cybersecurity at the University of Maryland."
   links:
 #    - label: "Website"
@@ -72,20 +72,20 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/ashleigh-louie"
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+#    - label: "Twitter"
+#      icon: "fab fa-fw fa-twitter-square"
+#      url: "https://twitter.com/"
     - label: "GitHub"
-      icon: "fab fa-fw fa-github"
+#      icon: "fab fa-fw fa-github"
       url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/ashleigh-louie"
 
 defaults:
   # _posts
