--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
 #      url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/AshLouie"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/ashleigh-louie"
@@ -82,7 +82,7 @@ footer:
 #      url: "https://twitter.com/"
     - label: "GitHub"
 #      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/AshLouie"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/ashleigh-louie"
